<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_buttons"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:gravity="left"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prev"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrevTrackClick"
                android:text="@string/btn_prev" />

            <Button
                android:id="@+id/button_play_pause"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPlayPauseClick"
                android:text="@string/btn_play_pause" />

            <Button
                android:id="@+id/button_stop"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStopClick"
                android:text="@string/btn_stop" />

            <Button
                android:id="@+id/button_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNextTrackClick"
                android:text="@string/btn_next" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons_2"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:gravity="left"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_get_info"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGetInfoClick"
                android:text="@string/btn_get_info" />

            <Button
                android:id="@+id/button_stop_get_info"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onStopGetInfoClick"
                android:text="@string/btn_stop_get_info" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_buttons_3"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:gravity="left"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_set_dummy_playbackinfo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSetDummyPlaybackInfoClick"
                android:text="Set Dummy Playback Info" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>